# speech-to-text-to-speech-backend

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/: Alembic.md
docs/: api-docs.html  openapi.json
internal/app/: main.py
internal/app/api/routes/: health.py
scripts/: setup-runtime-assets.ps1  setup-runtime-assets.sh
src/: __init__.py
src/adapters/inbound/api/: __init__.py  deps.py  fastapi_app.py
src/adapters/inbound/api/routes/: health.py  speech_jobs.py
src/adapters/inbound/api/schemas/: requests.py  responses.py
src/adapters/outbound/: exceptions.py
src/adapters/outbound/audio/: __init__.py  ffmpeg_audio_processor.py
src/adapters/outbound/persistence/sqlalchemy/: __init__.py  base.py  (+3 more)
src/adapters/outbound/speech/: __init__.py  piper_tts.py  whisper_asr.py
src/adapters/outbound/storage/: __init__.py  local_object_storage.py  s3_object_storage.py
src/adapters/outbound/transcript/: __init__.py  basic_transcript_transformer.py
src/application/ports/repositories/: __init__.py  speech_job_repository.py
src/application/ports/services/: __init__.py  asr_service.py  audio_processor.py  object_storage.py  transcript_transformer.py  tts_service.py
src/application/use_cases/: __init__.py  create_speech_job.py  get_output_audio.py  get_speech_job.py
src/bootstrap/: config.py  containers.py
src/domain/speech_job/: __init__.py  entities.py  enums.py  value_objects.py
tests/integration/: test_speech_jobs_api.py
tests/unit/: test_create_speech_job_stage_progression.py  test_outbound_adapters.py
