[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-speech-backend"
version = "0.1.0"
description = "Speech-to-speech backend using clean architecture"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-multipart",
  "sqlalchemy",
  "psycopg[binary]",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
